<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:padding="5dp"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/FirstTitle"
                android:textSize="30sp"
                android:textAlignment="center"
                android:textColor="@color/MyColor"
                android:textStyle="bold"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/txtRut"
                    android:hint="@string/dni"
                    android:inputType="text"
                    android:textSize="15sp"
                    android:layout_weight="1"
                    android:layout_marginRight="3dp"/>
                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/btnButton"
                    android:text="@string/v2"
                    android:textSize="15dp"
                    android:layout_weight="4"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/txtName"
                    android:textSize="15sp"
                    android:layout_weight="1"
                    android:inputType="textPersonName"
                    android:hint="@string/name"/>
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/txtLName"
                    android:textSize="15sp"
                    android:layout_weight="1"
                    android:inputType="textPersonName"
                    android:hint="@string/lname"/>

            </LinearLayout>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/txtEmail"
                android:inputType="textEmailAddress"
                android:textSize="15sp"
                android:hint="@string/e"/>

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/optSexM"
                    android:hint="@string/m"
                    android:checked="true"
                    android:textSize="15sp"
                    android:layout_weight="1"/>

                <RadioButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/optSexF"
                    android:hint="@string/f"
                    android:checked="false"
                    android:textSize="15sp"
                    android:layout_weight="1"/>

            </RadioGroup>

            <Spinner
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/spinnerCountry"
                android:textAlignment="center"
                android:entries="@array/paises"
                android:layout_marginTop="5sp">
            </Spinner>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="10sp">

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/btnReg"
                    android:text="@string/r"
                    android:textSize="15dp"
                    android:layout_weight="1"/>

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/btnClean"
                    android:text="@string/c"
                    android:textSize="15dp"
                    android:layout_weight="1"/>


            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>